mobile layout finished

--- a/index.html
+++ b/index.html
@@ -33,85 +33,106 @@
           data-visible="false"
           class="primary-navigation flex">
           <li>
-            <a class="" href="index.html">Home</a>
+            <a class="fs-600 uppercase nav-text" href="index.html">Home</a>
           </li>
           <li>
-            <a class="" href="#">New</a>
+            <a class="fs-600 uppercase nav-text" href="#">New</a>
           </li>
           <li>
-            <a class="" href="#">Popular</a>
+            <a class="fs-600 uppercase nav-text" href="#">Popular</a>
           </li>
           <li>
-            <a class="" href="#">Trending</a>
+            <a class="fs-600 uppercase nav-text" href="#">Trending</a>
           </li>
           <li>
-            <a class="" href="#">Categories</a>
+            <a class="fs-600 uppercase nav-text" nav-text-color href="#"
+              >Categories</a
+            >
           </li>
         </ul>
       </nav>
     </header>
 
     <main id="main" class="grid-container">
-      <div class="container">
+      <div class="top flow">
         <picture>
           <source srcset="images/image-web-3-mobile.jpg" type="img" />
           <img src="images/image-web-3-mobile.jpg" alt="web 3" />
         </picture>
-        <div>
-          <h1>The Bright Future of Web 3.0?</h1>
-          <p>
+        <div class="flow">
+          <h1 class="fs-900 text-dark">The Bright Future of Web 3.0?</h1>
+          <p class="fs-400 text-dark-blue line-height-p">
             We dive into the next evolution of the web that claims to put the
             power of the platforms back into the hands of the people. But is it
             really fulfilling its promise?
           </p>
-          <button>Read more</button>
+          <button
+            class="fs-400 fw-700 button uppercase letter-spacing-3 text-off-white">
+            Read more
+          </button>
         </div>
       </div>
 
-      <article>
-        <h2>New</h2>
-        <h3>Hydrogen VS Electric Cars</h3>
-        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      <article class="middle bg-dark text-off-white container">
+        <h2 class="text-orange fs-700">New</h2>
+        <h3 class="fs-600">Hydrogen VS Electric Cars</h3>
+        <p class="fs-400 line-height-small text-dark-blue">
+          Will hydrogen-fueled cars ever catch up to EVs?
+        </p>
         <hr />
         <h3>The Downsides of AI Artistry</h3>
-        <p>
+        <p class="fs-400 line-height-small text-dark-blue">
           What are the possible adverse effects of on-demand AI image
           generation?
         </p>
         <hr />
         <h3>Is VC Funding Drying Up?</h3>
-        <p>
+        <p class="fs-400 line-height-small text-dark-blue">
           Private funding by VC firms is down 50% YOY. We take a look at what
           that means.
         </p>
       </article>
-      <article class="container flex">
-        <div>
-          <picture>
-            <source srcset="images/image-retro-pcs.jpg" type="img" />
-            <img src="images/image-retro-pcs.jpg" alt="retro pc" />
-          </picture>
-          <h2>01</h2>
-          <h4>Reviving Retro PCs</h4>
-          <p>What happens when old PCs are given modern upgrades?</p>
-        </div>
-        <div>
-          <picture>
-            <source srcset="images/image-top-laptops.jpg" type="img" />
-            <img src="images/image-top-laptops.jpg" alt="laptop" />
-          </picture>
-          <h2>02</h2>
-          <h4>Top 10 Laptops of 2022</h4>
-          <p>Our best picks for various needs and budgets.</p>
-        </div>
-        <div>
-          <picture>
-            <source srcset="images/image-retro-pcs.jpg" type="img" />
-            <img src="images/image-retro-pcs.jpg" alt="retro pc" />
-          </picture>
-          <h2>03</h2>
-          <h4>The Growth of Gaming</h4>
-          <p>How the pandemic has sparked fresh opportunities.</p>
+      <article class="bottom">
+        <div class="flex-container">
+          <div class="flex grid-container--bottom">
+            <picture class="bottom-image">
+              <source srcset="images/image-retro-pcs.jpg" type="img" />
+              <img src="images/image-retro-pcs.jpg" alt="retro pc" />
+            </picture>
+            <div class="bottom-content">
+              <h2 class="fs-800 text-blue">01</h2>
+              <h4 class="fs-600 text-dark">Reviving Retro PCs</h4>
+              <p class="fs-400 text-dark-blue line-height-p">
+                What happens when old PCs are given modern upgrades?
+              </p>
+            </div>
+          </div>
+          <div class="flex grid-container--bottom">
+            <picture class="bottom-image">
+              <source srcset="images/image-top-laptops.jpg" type="img" />
+              <img src="images/image-top-laptops.jpg" alt="laptop" />
+            </picture>
+            <div class="bottom-content">
+              <h2 class="fs-800 text-blue">02</h2>
+              <h4 class="fs-600 text-dark">Top 10 Laptops of 2022</h4>
+              <p class="fs-400 text-dark-blue line-height-p">
+                Our best picks for various needs and budgets.
+              </p>
+            </div>
+          </div>
+          <div class="flex grid-container--bottom"> 
+            <picture class="bottom-image">
+              <source srcset="images/image-retro-pcs.jpg" type="img" />
+              <img src="images/image-gaming-growth.jpg" alt="retro pc" />
+            </picture>
+            <div class="bottom-content">
+              <h2 class="fs-800 text-blue">03</h2>
+              <h4 class="fs-600 text-dark">The Growth of Gaming</h4>
+              <p class="fs-400 text-dark-blue line-height-p">
+                How the pandemic has sparked fresh opportunities.
+              </p>
+            </div>
+          </div>
         </div>
       </article>
     </main>
