--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
-  <body>
+  <body class="container">
     <a class="skip-to-content" href="#main">Skip to content</a>
 
     <header class="primary-header flex">
@@ -54,14 +54,22 @@
     </header>
 
     <main id="main" class="grid-container">
-      <div class="top flow">
-        <picture>
-          <source srcset="images/image-web-3-mobile.jpg" type="img" />
-          <img src="images/image-web-3-mobile.jpg" alt="web 3" />
-        </picture>
-        <div class="flow">
-          <h1 class="fs-900 text-dark">The Bright Future of Web 3.0?</h1>
-          <p class="fs-400 text-dark-blue line-height-p">
+      <div class="top-image flow">
+        <div>
+          <picture>
+            <source
+              media="(min-width: 45em)"
+              srcset="images/image-web-3-desktop.jpg"/>
+            <img src="images/image-web-3-mobile.jpg" alt="web 3" />
+          </picture>
+        </div>
+      </div>
+      <div class="top-content">
+        <h1 class="fs-900 text-dark title-content">
+          The Bright Future of Web 3.0?
+        </h1>
+        <div class="flow text-content">
+          <p class="fs-400 text-dark-blue line-height-p ">
             We dive into the next evolution of the web that claims to put the
             power of the platforms back into the hands of the people. But is it
             really fulfilling its promise?
@@ -73,21 +81,21 @@
         </div>
       </div>
 
-      <article class="middle bg-dark text-off-white container">
+      <article class="middle bg-dark text-off-white wrapper">
         <h2 class="text-orange fs-700">New</h2>
-        <h3 class="fs-600">Hydrogen VS Electric Cars</h3>
-        <p class="fs-400 line-height-small text-dark-blue">
+        <h3 class="fs-600 hover-text">Hydrogen VS Electric Cars</h3>
+        <p class="fs-400 line-height-small text-blue">
           Will hydrogen-fueled cars ever catch up to EVs?
         </p>
         <hr />
-        <h3>The Downsides of AI Artistry</h3>
-        <p class="fs-400 line-height-small text-dark-blue">
+        <h3 class="fs-600 hover-text">The Downsides of AI Artistry</h3>
+        <p class="fs-400 line-height-small text-blue">
           What are the possible adverse effects of on-demand AI image
           generation?
         </p>
         <hr />
-        <h3>Is VC Funding Drying Up?</h3>
-        <p class="fs-400 line-height-small text-dark-blue">
+        <h3 class="fs-600 hover-text">Is VC Funding Drying Up?</h3>
+        <p class="fs-400 line-height-small text-blue">
           Private funding by VC firms is down 50% YOY. We take a look at what
           that means.
         </p>
@@ -120,7 +128,7 @@
               </p>
             </div>
           </div>
-          <div class="flex grid-container--bottom"> 
+          <div class="flex grid-container--bottom">
             <picture class="bottom-image">
               <source srcset="images/image-retro-pcs.jpg" type="img" />
               <img src="images/image-gaming-growth.jpg" alt="retro pc" />
