--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
           data-visible="false"
           class="primary-navigation flex">
           <li>
-            <a class="fs-600 uppercase nav-text" href="index.html">Home</a>
+            <a class="uppercase nav-text" href="index.html">Home</a>
           </li>
           <li>
-            <a class="fs-600 uppercase nav-text" href="#">New</a>
+            <a class="uppercase nav-text" href="#">New</a>
           </li>
           <li>
-            <a class="fs-600 uppercase nav-text" href="#">Popular</a>
+            <a class="uppercase nav-text" href="#">Popular</a>
           </li>
           <li>
-            <a class="fs-600 uppercase nav-text" href="#">Trending</a>
+            <a class="uppercase nav-text" href="#">Trending</a>
           </li>
           <li>
-            <a class="fs-600 uppercase nav-text" nav-text-color href="#"
+            <a class="uppercase nav-text" nav-text-color href="#"
               >Categories</a
             >
           </li>
@@ -54,52 +54,56 @@
     </header>
 
     <main id="main" class="grid-container">
-      <div class="top-image flow">
+      <section class="grid-container--top">
         <div>
-          <picture>
-            <source
-              media="(min-width: 45em)"
-              srcset="images/image-web-3-desktop.jpg"/>
-            <img src="images/image-web-3-mobile.jpg" alt="web 3" />
-          </picture>
+          <div class="top-image flow">
+            <div>
+              <picture>
+                <source
+                  media="(min-width: 45em)"
+                  srcset="images/image-web-3-desktop.jpg" />
+                <img src="images/image-web-3-mobile.jpg" alt="web 3" />
+              </picture>
+            </div>
+          </div>
+          <div class="top-content">
+            <h1 class="fs-900 text-dark title-content">
+              The Bright Future of Web 3.0?
+            </h1>
+            <div class="flow text-content">
+              <p class="fs-400 text-dark-blue line-height-p">
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </p>
+              <button
+                class="fs-400 fw-700 button uppercase letter-spacing-3 text-off-white">
+                Read more
+              </button>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="top-content">
-        <h1 class="fs-900 text-dark title-content">
-          The Bright Future of Web 3.0?
-        </h1>
-        <div class="flow text-content">
-          <p class="fs-400 text-dark-blue line-height-p ">
-            We dive into the next evolution of the web that claims to put the
-            power of the platforms back into the hands of the people. But is it
-            really fulfilling its promise?
-          </p>
-          <button
-            class="fs-400 fw-700 button uppercase letter-spacing-3 text-off-white">
-            Read more
-          </button>
-        </div>
-      </div>
 
-      <article class="middle bg-dark text-off-white wrapper">
-        <h2 class="text-orange fs-700">New</h2>
-        <h3 class="fs-600 hover-text">Hydrogen VS Electric Cars</h3>
-        <p class="fs-400 line-height-small text-blue">
-          Will hydrogen-fueled cars ever catch up to EVs?
-        </p>
-        <hr />
-        <h3 class="fs-600 hover-text">The Downsides of AI Artistry</h3>
-        <p class="fs-400 line-height-small text-blue">
-          What are the possible adverse effects of on-demand AI image
-          generation?
-        </p>
-        <hr />
-        <h3 class="fs-600 hover-text">Is VC Funding Drying Up?</h3>
-        <p class="fs-400 line-height-small text-blue">
-          Private funding by VC firms is down 50% YOY. We take a look at what
-          that means.
-        </p>
-      </article>
+        <article class="middle bg-dark text-off-white wrapper">
+          <h2 class="text-orange fs-700">New</h2>
+          <h3 class="fs-600 hover-text">Hydrogen VS Electric Cars</h3>
+          <p class="fs-400 line-height-small text-blue">
+            Will hydrogen-fueled cars ever catch up to EVs?
+          </p>
+          <hr />
+          <h3 class="fs-600 hover-text">The Downsides of AI Artistry</h3>
+          <p class="fs-400 line-height-small text-blue">
+            What are the possible adverse effects of on-demand AI image
+            generation?
+          </p>
+          <hr />
+          <h3 class="fs-600 hover-text">Is VC Funding Drying Up?</h3>
+          <p class="fs-400 line-height-small text-blue">
+            Private funding by VC firms is down 50% YOY. We take a look at what
+            that means.
+          </p>
+        </article>
+      </section>
       <article class="bottom">
         <div class="flex-container">
           <div class="flex grid-container--bottom">
@@ -109,7 +113,7 @@
             </picture>
             <div class="bottom-content">
               <h2 class="fs-800 text-blue">01</h2>
-              <h4 class="fs-600 text-dark">Reviving Retro PCs</h4>
+              <h3 class="fs-600 text-dark">Reviving Retro PCs</h3>
               <p class="fs-400 text-dark-blue line-height-p">
                 What happens when old PCs are given modern upgrades?
               </p>
@@ -122,7 +126,7 @@
             </picture>
             <div class="bottom-content">
               <h2 class="fs-800 text-blue">02</h2>
-              <h4 class="fs-600 text-dark">Top 10 Laptops of 2022</h4>
+              <h3 class="fs-600 text-dark">Top 10 Laptops of 2022</h3>
               <p class="fs-400 text-dark-blue line-height-p">
                 Our best picks for various needs and budgets.
               </p>
@@ -135,7 +139,7 @@
             </picture>
             <div class="bottom-content">
               <h2 class="fs-800 text-blue">03</h2>
-              <h4 class="fs-600 text-dark">The Growth of Gaming</h4>
+              <h3 class="fs-600 text-dark">The Growth of Gaming</h3>
               <p class="fs-400 text-dark-blue line-height-p">
                 How the pandemic has sparked fresh opportunities.
               </p>
